lab9/err.txt
/root/lab1/Operating-system-lab/lab9/lab9.c: In function ‘Cipher_Proc_show’:
/root/lab1/Operating-system-lab/lab9/lab9.c:179:58: error: expected ‘)’ before ‘;’ token
      rc4(encrypted_data, key_check,data_proc,sizeof(data);
                                                          ^
                                                          )
/root/lab1/Operating-system-lab/lab9/lab9.c:181:21: error: expected ‘;’ before ‘}’ token
            return 0;
                     ^
                     ;
/root/lab1/Operating-system-lab/lab9/lab9.c:183:5:
     }
     ~                
/root/lab1/Operating-system-lab/lab9/lab9.c:183:5: warning: no return statement in function returning non-void [-Wreturn-type]
     }
     ^
/root/lab1/Operating-system-lab/lab9/lab9.c: In function ‘device_init’:
/root/lab1/Operating-system-lab/lab9/lab9.c:222:5: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
     int major = register_chrdev_region(MKDEV(300,0),2,"cipher");
     ^~~
/root/lab1/Operating-system-lab/lab9/lab9.c: In function ‘Cipher_key_Dev_write’:
/root/lab1/Operating-system-lab/lab9/lab9.c:82:5: warning: ignoring return value of ‘copy_from_user’, declared with attribute warn_unused_result [-Wunused-result]
     copy_from_user(key,ch, sa);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lab1/Operating-system-lab/lab9/lab9.c: In function ‘Cipher_Dev_write’:
/root/lab1/Operating-system-lab/lab9/lab9.c:153:5: warning: ignoring return value of ‘copy_from_user’, declared with attribute warn_unused_result [-Wunused-result]
     copy_from_user(data,ch, sa);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lab1/Operating-system-lab/lab9/lab9.c: In function ‘Cipher_key_Proc_write’:
/root/lab1/Operating-system-lab/lab9/lab9.c:117:5: warning: ignoring return value of ‘copy_from_user’, declared with attribute warn_unused_result [-Wunused-result]
     copy_from_user(key_check,ch, sa);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[4]: *** [/usr/src/linux-headers-4.19.0-13-common/scripts/Makefile.build:315: /root/lab1/Operating-system-lab/lab9/lab9.o] Error 1
make[3]: *** [/usr/src/linux-headers-4.19.0-13-common/Makefile:1565: _module_/root/lab1/Operating-system-lab/lab9] Error 2
make[2]: *** [Makefile:146: sub-make] Error 2
make[1]: *** [Makefile:8: all] Error 2
make: *** [Makefile:4: all] Error 2
